--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme.NoActionBar">
         <activity android:name=".list_movies.MainActivity" android:configChanges="keyboardHidden|orientation|screenSize">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -19,7 +19,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".detail_movie.MovieDetailActivity" android:label="@string/app_detail"
-            android:configChanges="keyboardHidden|orientation|screenSize"></activity>
+            android:theme="@style/AppTheme.NoActionBar.Translucent"
+            android:configChanges="keyboardHidden|orientation|screenSize"/>
         <provider
             android:authorities="com.rizkiraynaldy.popularmoviestage2"
             android:name=".data.MovieContentProvider"
